packages/wasm/ballerina-lang-go/parser/testdata/tokens/record/negative/closed_record_nil-able_fn_ptr.token
(type 4 0x00 ())
(ident, "Person" 6 0x00 ())
(record 6 0x00 ())
({| 2 0x00 ())
(string 6 0x00 ())
(ident, "fname" 5 0x00 ())
(= 1 0x00 ())
(string, """" 2 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(ident, "lname" 5 0x00 ())
(= 1 0x00 ())
(string, """" 2 0x00 ())
(; 1 0x00 ())
(( 1 0x00 ())
(function 8 0x00 ())
(( 1 0x00 ())
(string 6 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(string 6 0x00 ())
() 1 0x00 ())
(? 1 0x00 ())
(ident, "getName" 7 0x00 ())
(= 1 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(|} 2 0x00 ())
(; 1 0x00 ())
(function 8 0x00 ())
(ident, "testNilableFuncPtrInvocation" 28 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "bob" 3 0x00 ())
(= 1 0x00 ())
({ 1 0x00 ())
(ident, "fname" 5 0x00 ())
(: 1 0x00 ())
(string, ""bob"" 5 0x00 ())
(, 1 0x00 ())
(ident, "lname" 5 0x00 ())
(: 1 0x00 ())
(string, ""white"" 7 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(ident, "bob" 3 0x00 ())
(. 1 0x00 ())
(ident, "getName" 7 0x00 ())
(= 1 0x00 ())
(function 8 0x00 ())
(( 1 0x00 ())
(string 6 0x00 ())
(ident, "fname" 5 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
(ident, "lname" 5 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(string 6 0x00 ())
({ 1 0x00 ())
(return 6 0x00 ())
(ident, "fname" 5 0x00 ())
(+ 1 0x00 ())
(string, "" "" 3 0x00 ())
(+ 1 0x00 ())
(ident, "lname" 5 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(( 1 0x00 ())
(function 8 0x00 ())
(( 1 0x00 ())
(string 6 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(string 6 0x00 ())
() 1 0x00 ())
(? 1 0x00 ())
(ident, "fp" 2 0x00 ())
(= 1 0x00 ())
(ident, "bob" 3 0x00 ())
(. 1 0x00 ())
(ident, "getName" 7 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(? 1 0x00 ())
(ident, "x" 1 0x00 ())
(= 1 0x00 ())
(ident, "fp" 2 0x00 ())
(( 1 0x00 ())
(ident, "bob" 3 0x00 ())
(. 1 0x00 ())
(ident, "fname" 5 0x00 ())
(, 1 0x00 ())
(ident, "bob" 3 0x00 ())
(. 1 0x00 ())
(ident, "lname" 5 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(function 8 0x00 ())
(ident, "testNilableFuncPtrInvocation2" 29 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(ident, "Person" 6 0x00 ())
(ident, "bob" 3 0x00 ())
(= 1 0x00 ())
({ 1 0x00 ())
(ident, "fname" 5 0x00 ())
(: 1 0x00 ())
(string, ""bob"" 5 0x00 ())
(, 1 0x00 ())
(ident, "lname" 5 0x00 ())
(: 1 0x00 ())
(string, ""white"" 7 0x00 ())
(} 1 0x00 ())
(; 1 0x00 ())
(( 1 0x00 ())
(function 8 0x00 ())
(( 1 0x00 ())
(string 6 0x00 ())
(, 1 0x00 ())
(string 6 0x00 ())
() 1 0x00 ())
(returns 7 0x00 ())
(string 6 0x00 ())
() 1 0x00 ())
(? 1 0x00 ())
(ident, "fp" 2 0x00 ())
(= 1 0x00 ())
(ident, "bob" 3 0x00 ())
(. 1 0x00 ())
(ident, "getName" 7 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(? 1 0x00 ())
(ident, "x" 1 0x00 ())
(= 1 0x00 ())
(ident, "fp" 2 0x00 ())
(( 1 0x00 ())
(ident, "bob" 3 0x00 ())
(. 1 0x00 ())
(ident, "fname" 5 0x00 ())
(, 1 0x00 ())
(ident, "bob" 3 0x00 ())
(. 1 0x00 ())
(ident, "lname" 5 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
